2nd version of RPS. Basic structure is completed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     Play in the console please (Developer tools)
-<script> src = "./main.js" </script>
+<script src = "main.js">  </script>
 
 
 </body>
