First UI update)

--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock, paper, scissors</title>
+    <script src = "main.js" defer> </script>
 </head>
 <body>
+<h1>Rock, paper , scissors</h1>
+    <button class= "selection" id="rock" style='font-size:100px;'>&#9994;</button>
+    <button class= "selection" id="paper" style='font-size:100px;'>&#9995;</button>
+    <button class= "selection" id="scissors" style='font-size:100px;'>&#9996;</button>
 
-    Play in the console please (Developer tools)
-<script src = "main.js">  </script>
 
 
 </body>
