--- a/index.html
+++ b/index.html
@@ -5,14 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock, paper, scissors</title>
+    <link rel="stylesheet" href="style.css">
     <script src = "main.js" defer> </script>
 </head>
 <body>
-<h1>Rock, paper , scissors</h1>
-    <button class= "selection" id="rock" style='font-size:100px;'>&#9994;</button>
-    <button class= "selection" id="paper" style='font-size:100px;'>&#9995;</button>
-    <button class= "selection" id="scissors" style='font-size:100px;'>&#9996;</button>
-
+    <h1>ROCK PAPER SCISSORS</h1>
+    <h2>Play against the alien! </h2>
+    <div class="alien">
+        <img src="./img/rocketeering-alien.png" width = "50" height = auto alt="Alien">
+    </div>
+    <div class="main">
+        <button class= "selection" id="rock">&#9994;</button>
+        <button class= "selection" id="paper">&#9995;</button>
+        <button class= "selection" id="scissors">&#9996;</button>
+    </div>
+    <div class="scoreboard"> 
+    </div>
 
 
 </body>
