Added scoreboard functionality

--- a/index.html
+++ b/index.html
@@ -12,16 +12,22 @@
     <h1>ROCK PAPER SCISSORS</h1>
     <h2>Play against the alien! </h2>
     <div class="alien">
-        <img src="./img/rocketeering-alien.png" width = "50" height = auto alt="Alien">
+        <img src="./img/rocketeering-alien.png" alt="Alien">
     </div>
     <div class="main">
         <button class= "selection" id="rock">&#9994;</button>
         <button class= "selection" id="paper">&#9995;</button>
         <button class= "selection" id="scissors">&#9996;</button>
     </div>
-    <div class="scoreboard"> 
+    <div class="displayWinner">
+        <div class="scoreboard">
+            <div class="title">SCOREBOARD</div>
+            <div class="points">
+                <div>Player score: </div>
+                <div>Computer score: </div>
+            </div>
+        </div>
     </div>
-
 
 </body>
 </html>
