Scoreboard now displaying points correctly

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
         <div class="scoreboard">
             <div class="title">SCOREBOARD</div>
             <div class="points">
-                <div>Player score: </div>
-                <div>Computer score: </div>
+                
+                <div id="playerScore">Player score: 0</div>
+                <div id="computerScore">Alien score: 0</div>
             </div>
         </div>
     </div>
