Added pictures for selection buttons

--- a/index.html
+++ b/index.html
@@ -11,14 +11,7 @@
 <body>
     <h1>ROCK PAPER SCISSORS</h1>
     <h2>Play against the alien! </h2>
-    <div class="alien">
-        <img src="./img/rocketeering-alien.png" alt="Alien">
-    </div>
-    <div class="main">
-        <button class= "selection" id="rock">&#9994;</button>
-        <button class= "selection" id="paper">&#9995;</button>
-        <button class= "selection" id="scissors">&#9996;</button>
-    </div>
+    
     <div class="displayWinner">
         <div class="scoreboard">
             <div class="title">SCOREBOARD</div>
@@ -28,6 +21,24 @@
                 <div id="computerScore">Alien score: 0</div>
             </div>
         </div>
+    </div>
+
+    <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="./img/rocketeering-alien.png" alt="Avatar" style="width:100px;height:auto;">
+          </div>
+          <div class="flip-card-back">
+            <h1>John Doe</h1>
+            <p>Architect & Engineer</p>
+            <p>We love that guy</p>
+          </div>
+        </div>
+      </div>
+    <div class="main">
+        <button class= "selection" id="rock"></button>
+        <button class= "selection" id="paper"></button>
+        <button class= "selection" id="scissors"></button>
     </div>
 
 </body>
