Fitted button images

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>ROCK PAPER SCISSORS</h1>
-    <h2>Play against the alien! </h2>
+    <h2>Play against Allie the alien! </h2>
     
     <div class="displayWinner">
         <div class="scoreboard">
@@ -18,7 +18,7 @@
             <div class="points">
                 
                 <div id="playerScore">Player score: 0</div>
-                <div id="computerScore">Alien score: 0</div>
+                <div id="computerScore">Allie score: 0</div>
             </div>
         </div>
     </div>
@@ -29,9 +29,9 @@
             <img src="./img/rocketeering-alien.png" alt="Avatar" style="width:100px;height:auto;">
           </div>
           <div class="flip-card-back">
-            <h1>John Doe</h1>
-            <p>Architect & Engineer</p>
-            <p>We love that guy</p>
+            <h1>Created by</h1>
+            <p>Webdev</p>
+            <p>Rolando Garcia R</p>
           </div>
         </div>
       </div>
