Added spaceship img

--- a/index.html
+++ b/index.html
@@ -11,30 +11,30 @@
 <body>
     <h1>ROCK PAPER SCISSORS</h1>
     <h2>Play against Allie the alien! </h2>
-    
     <div class="displayWinner">
         <div class="scoreboard">
             <div class="title">SCOREBOARD</div>
             <div class="points">
-                
                 <div id="playerScore">Player score: 0</div>
                 <div id="computerScore">Allie score: 0</div>
             </div>
         </div>
     </div>
-
-    <div class="flip-card">
-        <div class="flip-card-inner">
-          <div class="flip-card-front">
-            <img src="./img/rocketeering-alien.png" alt="Avatar" style="width:100px;height:auto;">
-          </div>
-          <div class="flip-card-back">
-            <h1>Created by</h1>
-            <p>Webdev</p>
-            <p>Rolando Garcia R</p>
+    <div class="rivals">
+      <div class="spaceship"><img src="./img/spaceship.png" alt="spaceship"></div>
+      <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img src="./img/rocketeering-alien.png" alt="Avatar" style="width:100px;height:auto;">
+            </div>
+            <div class="flip-card-back">
+              <h1>Created by</h1>
+              <p>Rolando Garcia R</p>
+            </div>
           </div>
         </div>
-      </div>
+    </div>
+   
     <div class="main">
         <button class= "selection" id="rock"></button>
         <button class= "selection" id="paper"></button>
