Separated 'displayWinnermsg' from main func

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     </div>
     <div class="rivals">
       <div class="spaceship"><img src="./img/spaceship.png" alt="spaceship"></div>
+      <div class="winner"></div>
       <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
@@ -36,9 +37,13 @@
     </div>
    
     <div class="main">
+      <div class="pick">Pick one to play</div>
+      <div class="selectionButtons">
         <button class= "selection" id="rock"></button>
         <button class= "selection" id="paper"></button>
         <button class= "selection" id="scissors"></button>
+      </div>
+    
     </div>
 
 </body>
