--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h2>Play against Allie the alien! </h2>
     <div class="displayWinner">
         <div class="scoreboard">
-            <div class="title">SCOREBOARD</div>
+            <div class="title">First to get 5 wins gets the planet</div>
             <div class="points">
                 <div id="playerScore">Player score: 0</div>
                 <div id="computerScore">Allie score: 0</div>
